# SeisFMTD

./: .gitignore  README.md  __init__.py  pyproject.toml
SeisFMTD/: __init__.py
SeisFMTD/pyCAPLunar/: BCOK.XHE.sac  DCut.py  DPrepare.py  GTools.py
SeisFMTD/pyCAPSolvers/: DHMC_linear.py  DHMC_mtd_linear.py  __init__.py
examples/: README.md  run_hmc_mt_example.py  run_hmc_mtd_example.py
pyCAPLunar/: DCAP.py  DCAPUtils.py  DFilters.py  DMisfit.py  DPaste.py  test_real_sac.py
test/: run_hmc_da.py  sgt_stream.pkl  visualize_samples_tape6.py
test/data/: process_data_to_sac.py
test/results/: Samples_N1000_.pkl  _paras_samples_1000.txt
test/syn_sac/: BCOK.XHN.sac  BCOK.XHZ.sac  BLOK.XHE.sac  BLOK.XHN.sac  BLOK.XHZ.sac  CHOK.XHE.sac  CHOK.XHN.sac  CHOK.XHZ.sac  CROK.XHE.sac  CROK.XHN.sac  CROK.XHZ.sac  CSTR.XHE.sac  CSTR.XHN.sac  CSTR.XHZ.sac  DEOK.XHE.sac  DEOK.XHN.sac  DEOK.XHZ.sac  DRIP.XHE.sac  DRIP.XHN.sac  DRIP.XHZ.sac  ELIS.XHE.sac  ELIS.XHN.sac  ELIS.XHZ.sac  FNO.XHE.sac  FNO.XHN.sac  FNO.XHZ.sac  FREE.XHE.sac  FREE.XHN.sac  FREE.XHZ.sac  FW09.XHE.sac  FW09.XHN.sac  FW09.XHZ.sac  HTCH.XHE.sac  HTCH.XHN.sac  HTCH.XHZ.sac  IWM01.XHE.sac  IWM01.XHN.sac  IWM01.XHZ.sac  KAN01.XHE.sac  KAN01.XHN.sac  (+43 more)
